# noteit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: harden-phase1-report.md  harden-phase2-report.md  scrub-report.md
completions/: README.md  _noteit  noteit.bash  noteit.fish  noteit.ps1
docs/: ARCHITECTURE.md  AUTONOMY.md  BACKLOG.md
docs/adr/: 0001-repo-identity-from-root-commit.md  0002-no-clap-ambiguity-rule.md  0003-single-sqlite-store-with-fts5.md  0004-std-only-plugin-host-contract.md  0005-hard-delete-exception.md  0006-cli-stability-pre-1.0.md  README.md
docs/analysis/: HARDENING-CHECKLIST.md  HARDENING-RUNBOOK.md  MATURITY.md
docs/port/: PORT-PLAN.md  PORT-TRACK.md
docs/superpowers/plans/: 2026-07-17-noteit.md
docs/superpowers/specs/: 2026-07-17-hard-delete.md  2026-07-17-noteit-design.md  2026-07-17-single-query.md
man/: noteit.1
src/: cli.rs  context.rs  lib.rs  main.rs  render.rs  repoid.rs
src/cli/: mod.rs  parse.rs
src/plugin/: asset.rs  command.rs  host.rs  hosts.rs  libraries.rs  mod.rs  noteit.rs  registry.rs  write_tree.rs
src/store/: contexts.rs  mod.rs  notes.rs  schema.rs
tests/: adoption.rs  cli.rs  config.rs  context.rs  editor.rs  main_smoke.rs  plugin.rs  property.rs  render.rs  repoid.rs  run.rs  store.rs
tests/common/: mod.rs
