[package]
name = "noteit"
version = "0.1.0"
edition = "2024"
description = "Capture ideas as notes bound to the git repo you're in — they follow the repo across clones and renames."
license = "BSD-3-Clause"
repository = "https://github.com/dyammarcano/noteit"
readme = "README.md"
keywords = ["notes", "cli", "git", "sqlite", "productivity"]
categories = ["command-line-utilities"]

[lib]
name = "noteit"
path = "src/lib.rs"

[[bin]]
name = "noteit"
path = "src/main.rs"

# gix MUST keep default features -- see Global Constraints.
# No clap: the ambiguity rule fights its parser -- see Global Constraints.
[dependencies]
gix = "0.85"
# `bundled` (compile SQLite from source, no system dep) is ON by default so
# normal builds are self-contained. It is a NAMED default feature only so a
# coverage build can drop it (`--no-default-features`) and link the system
# libsqlite3 -- otherwise `cargo llvm-cov` re-instruments the bundled C sources
# and never finishes. See docs/analysis/MATURITY.md and the CI coverage job.
rusqlite = { version = "0.40", default-features = false }
thiserror = "2.0"
tempfile = "3.27"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["bundled"]
bundled = ["rusqlite/bundled"]

[lints.clippy]
all = { level = "deny", priority = -1 }
